fix spacing using tailwind on auth pages

--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -1,30 +1,3 @@
-/* $linkedinBlue1: #0072b1; */
-/* $linkedinBlue2: #0073b1; */
-/* $linkedinBlue3: #004c75; */
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.register-wrapper {
-  .register-wrapper-inner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .heading {
-    font-family: system-ui;
-    font-weight: 500;
-    color: rgba(0, 0, 0, 0.9);
-  }
-
-  .sub-heading {
-    margin-top: -20px;
-    font-family: system-ui;
-  }
-}
 
 .register-btn {
   width: 300px;
@@ -41,20 +14,6 @@ body {
   margin-top: 1rem;
 }
 
-.login-btn:hover {
-  /* background-color: $linkedinBlue3; */
-}
-
-.auth-inputs {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  width: 300px;
-}
-
-.linkedinLogo {
-  width: 80px;
-}
 
 .hr-text {
   line-height: 1em;
