--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+#root {
+    height: 100vh;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
